--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
-<audio autoplay preload="auto" loop src="Relaxing Music .mp3">
+<audio autoplay  src="Relaxing Music .mp3" preload="auto" loop controls>
  
-</audio>
+
 <img src='w.gif'>
 
 <style>
@@ -10,3 +10,4 @@
         width:100%;
     }
 </style>
+</audio>
