--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<audio autoplay  src="Relaxing Music .mp3" preload="auto" loop controls>
+<audio autoplay  src="Relaxing Music .mp3" preload="auto" loop >
  
 
 <img src='w.gif'>
